<resources>
    <string name="app_name">FoodOrder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="user_name1">User Name:</string>
    <string name="user_profile">User Profile</string>
    <string name="e_mail">E-Mail:</string>
    <string name="role">Role:</string>
    <string name="phone_no">Phone No:</string>
    <string name="textview">TextView</string>
    <string name="select_role">select Role</string>
    <string name="e_mail1">E- Mail</string>
    <string name="phone_no1">Phone No</string>
    <string name="password1">Password</string>
    <string name="radiobutton">RadioButton</string>
    <string name="name">Name</string>
    <string name="register1">Register</string>
    <string name="customer">Customer</string>
    <string name="manager_admin">Manager/Admin</string>
    <string name="register">Register</string>
    <string name="login12">Login</string>
    <string name="click_here">Click Here !</string>
    <string name="login11">Login</string>
    <string name="button">Button</string>
    <string name="click_here1">Click Here!</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="cart">cart</string>
    <string name="menu">Menu</string>

</resources>
